discussion/kv_engine/158598/158598_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Split KVStoreIFace::commit in two

To support AB testing we need to only run postCommitMakeStatsVisible()
once per flush (or we overcount stats in the VBucket). This is a
post-flush step so separate it from the rest of commit() so that
the ABKVStore can skip it.

Change-Id: If12e0079ba96d672327935adef9b3c7973e841b8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-08-03 19:46:26.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-03 21:15:05.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38303/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc(63): error C2653: "ABKVStore": is not a class or namespace name ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38303/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11071/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30: error: use of undeclared identifier "ABKVStore"; did you mean "KVStore"? [clang-diagnostic-error]
std::pair<bool, kvstats_ctx> ABKVStore::commitInternal(
                             ^~~~~~~~~
                             KVStore
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.h:512:7: note: "KVStore" declared here
class KVStore : public KVStoreIface {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:41: error: out-of-line definition of "commitInternal" does not match any declaration in "KVStore" [clang-diagnostic-error]
std::pair<bool, kvstats_ctx> ABKVStore::commitInternal(
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11071/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30:
error: use of undeclared identifier "ABKVStore"; did you mean "KVStore"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11071/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32665/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30:
error: use of undeclared identifier "ABKVStore"; did you mean "KVStore"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32665/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12854/ : FAILURE

Compile error at [2021-08-03T21:12:08.070Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30:
error: ?ABKVStore? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12854/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13210/ : FAILURE

Compile error at [2021-08-03T21:12:53.974Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30:
error: use of undeclared identifier "ABKVStore"; did you mean "KVStore"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13210/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12666/ : FAILURE

Compile error at [2021-08-03T21:13:11.754Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12666/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20750/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/697/ : FAILURE

Compile error at [2021-08-03T21:10:11.238Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30:
error: use of undeclared identifier "ABKVStore"; did you mean "KVStore"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/697/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/679/ : FAILURE

Compile error at [2021-08-03T19:51:16.906Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11782/ : FAILURE

Compile error at [2021-08-03T20:14:59.129Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:63:30:
error: use of undeclared identifier "ABKVStore"; did you mean "KVStore"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11782/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9748/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
